# $Id$

2007-04-08	Konstantin V. Arkhipov

	* main/Base/AbstractProtoClass.class.php: now able to generate Form
	from internal properties list.

	* meta/builders/AutoProtoClassBuilder.class.php: dropped generation of
	makeForm().

	* main/Base/LightMetaProperty.class.php: size and type properties
	added.

2007-04-08	Dmitry E. Demidov

	* main/Flow/RedirectView.class.php,
	main/Flow/RedirectToView.class.php: change visibility of getUrl 
	to public.
	
2007-04-06	Ivan Y. Khvostishkov

	* main/Base/RequestType.class.php: added ability to import data from
	attached vars.

2007-04-04	Konstantin V. Arkhipov

	* meta/: syntax checking now off by default, use --syntax-check to
	enable it.

2007-04-03	Konstantin V. Arkhipov

	* meta/types/PasswordType.class.php: bye.

	* meta/: LazyOneToOne relation dropped, you can use
	'relation="OneToOne" fetch="lazy"' instead.

	* meta/: read-only includes implemented via 'build="false"' option.

	* meta/: --dry-run mode added.

2007-04-02	Konstantin V. Arkhipov

	* meta/internal.xml: new internal classes added - IdentifiableObject,
	NamedObject, IndetifiableTree, NamedTree.

2007-04-01	Konstantin V. Arkhipov

	* meta/: internal classes implementation finished.

	* meta/classes/MetaConfiguration.class.php: spooked class type is
	obsoleted now, do not specify it manually anymore, it will be set for
	spooked patterns automagically.

2007-03-30	Konstantin V. Arkhipov

	* core/Form/Primitives/BasePrimitive.class.php: isImported added.

	* core/Form/PlainForm.class.php,
	core/Form/Primitives/BasePrimitive.class.php: getSafeValue added.

2007-03-26	Konstantin V. Arkhipov

	* meta/types/: ranges support dropped.

	* main/Base/DateRange.class.php: split() ported to Date's usage.

	* test/core/DateRangeTest.class.php: more tests.

2007-03-25	Konstantin V. Arkhipov

	* main/Criteria/PropertyPath.class.php: useful utilities for path
	processing.

	* main/Criteria/Property.class.php: unused anyway, removed.

2007-03-23	Konstantin V. Arkhipov
