@@ -15,6 +15,67 @@
 	**/
 	abstract class ProtoDAO extends GenericDAO
 	{
+		protected function makeSelf(&$array, $prefix = null)
+		{
+			$className = $this->getObjectName();
+			$object = new $className;
+			
+			foreach ($this->getProtoClass()->getPropertyList() as $property) {
+				$column = $prefix.$property->getColumnName();
+				$setter = $property->getSetter();
+				$exists = isset($array[$column]);
+				
+				if ($property->isRequired()) {
+					Assert::isTrue(
+						$exists,
+						'required property not found for object '
+						.$className.' - '.$property->getName()
+					);
+				}
+				
+				$identifier = ($property->getName() == $this->getIdName());
+				
+				if (
+					$property->getRelationId()
+					|| $property->isGenericType()
+				) {
+					// skip collections
+					if (
+						($property->getRelationId() <> MetaRelation::ONE_TO_ONE)
+						&& !$property->isGenericType()
+					)
+						continue;
+					
+					if ($exists) {
+						$remoteClass = $property->getClassName();
+						if (
+							!$identifier
+							&& $property->isGenericType()
+							&& $remoteClass
+						) {
+							$object->$setter(
+								call_user_func(
+									array($remoteClass, 'create'),
+									$array[$column]
+								)
+							);
+						} elseif (!$identifier && $remoteClass) {
+							$dao = 
+								call_user_func(
+									array($remoteClass, 'dao')
+								);
+							
+							$object->$setter($dao->getById($array[$column]));
+						} else {
+							$object->$setter($array[$column]);
+						}
+					}
+				}
+			}
+			
+			return $object;
+		}
+		
 		public function fetchCollections(
 			/* array */ $collections, /* array */ $list
 		)
